--- a/tdd/package.json
+++ b/tdd/package.json
@@ -8,6 +8,8 @@
     "test": "mocha"
   },
   "dependencies": {
+    "@google-cloud/language": "^1.0.0",
+    "@google/maps": "^0.4.5",
     "axios": "^0.17.0",
     "body-parser": "~1.18.2",
     "chai": "^4.1.2",
