--- a/tdd/package.json
+++ b/tdd/package.json
@@ -18,11 +18,12 @@
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
+    "diffbot": "^1.0.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.5",
     "jade": "~1.11.0",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.12.5",
+    "mongoose": "^4.13.0",
     "morgan": "~1.9.0",
     "nodemon": "^1.12.1",
     "request": "^2.83.0",
